--- a/contact.html
+++ b/contact.html
@@ -99,8 +99,8 @@
                         <h3 class="mb-4">CONTACT US NOW</h3>
                         <ul>
                             <li><span class="mr-3  mb-3 fa fas fas fa-phone fa-rotate-90"></span><a class="text-dark" href="tel:8264954234">8264954234</a></li>
-                            <li><span class="mr-3  mb-3 fa fas far fa-envelope"></span><a class="text-dark" href="mailto:navdeepdahiya753@gmail.com">navdeepdahiya753@gmail.com</a></li>
-                            <li><span class="mr-3  mb-3 fa fas far fa-map-marked"></span><p class="d-inline">Mandauara, Sonipat ,Haryana</p></li>
+                            <li><span class="mr-3  mb-3 fa fas far fa-envelope"></span><a class="text-dark" href="mailto:dhamininijhgal@gmail.com">navdeepdahiya753@gmail.com</a></li>
+                            <li><span class="mr-3  mb-3 fa fas far fa-map-marked"></span><p class="d-inline">Bangalore</p></li>
                             <li><span class="mr-3  mb-3 fa fas far fa-clock"></span><p class="d-inline">MON-SAT:8:00-17:00 </p></li>
                         </ul>
 
