--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
                         <h3 class="mb-4">CONTACT US NOW</h3>
                         <ul>
                             <li><span class="mr-3  mb-3 fa fas fas fa-phone fa-rotate-90"></span><a class="text-dark" href="tel:8264954234">8264954234</a></li>
-                            <li><span class="mr-3  mb-3 fa fas far fa-envelope"></span><a class="text-dark" href="mailto:dhamininijhgal@gmail.com">navdeepdahiya753@gmail.com</a></li>
+                            <li><span class="mr-3  mb-3 fa fas far fa-envelope"></span><a class="text-dark" href="mailto:dhamininijhgal@gmail.com">dhamininijgal@gmail.com</a></li>
                             <li><span class="mr-3  mb-3 fa fas far fa-map-marked"></span><p class="d-inline">Bangalore</p></li>
                             <li><span class="mr-3  mb-3 fa fas far fa-clock"></span><p class="d-inline">MON-SAT:8:00-17:00 </p></li>
                         </ul>
@@ -257,7 +257,7 @@
     <div class="container-md">
         <div class="row">
             <div class="col-12">
-                <p class="text-center text-white">Developed by Navdeep</p>
+                <p class="text-center text-white">Developed by Dhamini Nijgal</p>
             </div>
         </div>
     </div>
