--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
                             <h3>OUR SERVICES</h3>
                         </div>
                         <div class="right float-right">
-                            <div class="btn-group " role="group" aria-label="Button group">
+                            <!-- <div class="btn-group " role="group" aria-label="Button group">
                                 <button class="prev btn text-white  mr-2" type="button" aria-label="prevbtn"><span
                                         class="fa fas fa-angle-left"></span></button>
                                 <button class="next btn text-white " type="button" aria-label="nextbtn"><span
                                         class="fa fas fa-angle-right"></span></button>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="row serviceslides">
@@ -146,9 +146,8 @@
                                 <img class="card-img-top" src="./img/service1.jpg" alt="Card image"
                                     style="width:100%; height:250px">
                                 <div class="card-body">
-                                    <h4 class="card-title">Electric Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
+                                    <h4 class="card-title">Organic fruits and Veggies</h4>
+                                    <p class="card-text">You can relesh some of the fresh fruits and Veggies from our garden</p>
                                     <a href="./service2.html" class="btn ">Service Details &gt;&gt;</a>
                                 </div>
                             </div>
@@ -158,9 +157,8 @@
                                 <img class="card-img-top" src="./img/drill.jpg" alt="Card image"
                                     style="width:100%; height:250px">
                                 <div class="card-body">
-                                    <h4 class="card-title">Construction Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
+                                    <h4 class="card-title">Spa Service</h4>
+                                    <p class="card-text">You can relesh some of the fresh fruits and Veggies from our garden</p>
                                     <a href="./service2.html" class="btn news2">Service Details &gt;&gt;</a>
                                 </div>
                             </div>
@@ -170,86 +168,10 @@
                                 <img class="card-img-top" src="./img/service2.jpg" alt="Card image"
                                     style="width:100%; height:250px">
                                 <div class="card-body">
-                                    <h4 class="card-title">Design Service</h4>
+                                    <h4 class="card-title"> Services </h4>
                                     <p class="card-text">Some example text some example text. John Doe is an architect
                                         and engineer</p>
                                     <a href="./service2.html" class="btn news3">Service Details &gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row  serviceslides">
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top" src="./img/service1.jpg" alt="Card image"
-                                    style="width:100%; height:250px">
-                                <div class="card-body">
-                                    <h4 class="card-title">Design Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
-                                    <a href="./service2.html" class="btn">Service Details &gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top" src="./img/drill.jpg" alt="Card image"
-                                    style="width:100%; height:250px">
-                                <div class="card-body">
-                                    <h4 class="card-title">Electric Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
-                                    <a href="./service2.html" class="btn ">Service Details &gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top" src="./img/service2.jpg" alt="Card image"
-                                    style="width:100%; height:250px">
-                                <div class="card-body">
-                                    <h4 class="card-title">Construction Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
-                                    <a href="./service2.html" class="btn">Service Details &gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row  serviceslides">
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top" src="./img/service1.jpg" alt="Card image"
-                                    style="width:100%; height:250px">
-                                <div class="card-body">
-                                    <h4 class="card-title">Construction Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
-                                    <a href="./service2.html" class="btn">Service Details &gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top" src="./img/drill.jpg" alt="Card image"
-                                    style="width:100%; height:250px">
-                                <div class="card-body">
-                                    <h4 class="card-title">Electric Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
-                                    <a href="./service2.html" class="btn ">Service Details &gt;&gt;</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-4">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top" src="./img/service2.jpg" alt="Card image"
-                                    style="width:100%; height:250px">
-                                <div class="card-body">
-                                    <h4 class="card-title">Design Service</h4>
-                                    <p class="card-text">Some example text some example text. John Doe is an architect
-                                        and engineer</p>
-                                    <a href="./service2.html" class="btn">Service Details &gt;&gt;</a>
                                 </div>
                             </div>
                         </div>
@@ -291,13 +213,10 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
                     <div>
                         <h3 class="colored  mb-4">Ab's Villa</h3>
-                        <p class="text-white text-justify text-justify">Construction core values have been shaped over
-                            more than 7 years of the
-                            finest
-                            services.</p>
+                        <p class="text-white text-justify text-justify"> We are know for the worlds best services </p>
                         <p class="text-white text-justify text-justify">We never tried to cut on either quality, the
                             pace of work or any other
-                            construction.</p>
+                            servicing you </p>
                     </div>
 
                 </div>
@@ -309,18 +228,13 @@
                                 <ul>
                                     <li class="mb-2"><a class="text-white" href="#">HOME</a></li>
                                     <li class="mb-2"><a class="text-white" href="#">ABOUT</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">SERVICE</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">PROJECT</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
+                                    
                                 </ul>
                             </div>
                             <div class="float-left ml-5">
                                 <ul>
                                     <li class="mb-2"><a class="text-white" href="#">CONTACT</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">OUR TEAM</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">NEW LATEST</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">OUR PARTNER</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">SUPPORT</a></li>
+                                    <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -365,7 +279,7 @@
         <div class="container-md">
             <div class="row">
                 <div class="col-12">
-                    <p class="text-center text-white">Developed by Navdeep</p>
+                    <p class="text-center text-white">Developed by Dhamini Nijgal</p>
                 </div>
             </div>
         </div>
