--- a/about.html
+++ b/about.html
@@ -400,7 +400,7 @@
     <div class="container-md">
         <div class="row">
             <div class="col-12">
-                <p class="text-center text-white">Developed by Navdeep</p>
+                <p class="text-center text-white"> Navdeep</p>
             </div>
         </div>
     </div>
