--- a/service2.html
+++ b/service2.html
@@ -578,7 +578,7 @@
     <div class="container-md">
         <div class="row">
             <div class="col-12">
-                <p class="text-center text-white">Developed by Navdeep</p>
+                <p class="text-center text-white">Developed by Dhamini Nijgal</p>
             </div>
         </div>
     </div>
