--- a/contact.html
+++ b/contact.html
@@ -186,11 +186,12 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
                 <div>
                     <h3 class="colored  mb-4">Ab's Villa</h3>
-                    <p class="text-white text-justify text-justify">Construction core values have been shaped over more than 7 years of the
-                        finest
-                        services.</p>
-                    <p class="text-white text-justify text-justify">We never tried to cut on either quality, the pace of work or any other
-                        construction.</p>
+                    <div>
+                        <p class="text-white text-justify text-justify"> We are know for the worlds best services </p>
+                        <p class="text-white text-justify text-justify">We never tried to cut on either quality, the
+                            pace of work or any other
+                            servicing you </p>
+                    </div>
                 </div>
 
             </div>
