--- a/about.html
+++ b/about.html
@@ -126,12 +126,12 @@
                         <p class="text-white">Years of Experience</p>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3 py-2">
-                        <h3>3000</h3>
-                        <p class="text-white">Project</p>
+                        <h3>200+</h3>
+                        <p class="text-white">Guests stayed with us</p>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3 py-2">
-                        <h3>2700</h3>
-                        <p class="text-white">Project Completed</p>
+                        <h3>4.1</h3>
+                        <p class="text-white">Google Review score</p>
                     </div>
                     <div class="col-12 col-sm-6 col-md-3 py-2">
                         <h3>20</h3>
@@ -170,8 +170,8 @@
                                 <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
                                     >
                                 <div class="card-body">
-                                    <h4 class="card-title">Chris Evan</h4>
-                                    <p class="card-text">Construction Manager</p>
+                                    <h4 class="card-title">Abigail</h4>
+                                    <p class="card-text">Managing Director</p>
                                 </div>
                             </div>
                         </div>
@@ -180,8 +180,8 @@
                                 <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
                                     >
                                 <div class="card-body">
-                                    <h4 class="card-title">Chris Evan</h4>
-                                    <p class="card-text">Construction Manager</p>
+                                    <h4 class="card-title">Mini </h4>
+                                    <p class="card-text">Co-Director</p>
                                 </div>
                             </div>
                         </div>
@@ -190,8 +190,8 @@
                                 <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
                                     >
                                 <div class="card-body">
-                                    <h4 class="card-title">Jhony Cage</h4>
-                                    <p class="card-text">Designer</p>
+                                    <h4 class="card-title">Shiju S</h4>
+                                    <p class="card-text">Co-Director</p>
                                 </div>
                             </div>
                         </div>
@@ -200,92 +200,8 @@
                                 <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
                                     >
                                 <div class="card-body">
-                                    <h4 class="card-title">Jhony Cage</h4>
-                                    <p class="card-text">Project Manager</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row  slider">
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Chris Evan</h4>
-                                    <p class="card-text">Construction Manager</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Chris Evan</h4>
-                                    <p class="card-text">Construction Manager</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3 ">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Jhony Cage</h4>
-                                    <p class="card-text">Designer</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3 " >
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Yash</h4>
-                                    <p class="card-text">Project Manager</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row  slider" >
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Chris Evan</h4>
-                                    <p class="card-text">Construction Manager</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Pratyush</h4>
-                                    <p class="card-text">Construction Manager</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3 " >
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Navdeep</h4>
-                                    <p class="card-text">Designer</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3 ">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Jhony Cage</h4>
-                                    <p class="card-text">Project Manager</p>
+                                    <h4 class="card-title">Anoop</h4>
+                                    <p class="card-text">Care-Taker</p>
                                 </div>
                             </div>
                         </div>
@@ -329,11 +245,12 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
                 <div>
                     <h3 class="colored  mb-4">Ab's Villa</h3>
-                    <p class="text-white text-justify text-justify">Construction core values have been shaped over more than 7 years of the
-                        finest
-                        services.</p>
-                    <p class="text-white text-justify text-justify">We never tried to cut on either quality, the pace of work or any other
-                        construction.</p>
+                    <div>
+                        <p class="text-white text-justify text-justify"> We are know for the worlds best services </p>
+                        <p class="text-white text-justify text-justify">We never tried to cut on either quality, the
+                            pace of work or any other
+                            servicing you </p>
+                    </div>
                 </div>
 
             </div>
@@ -345,19 +262,13 @@
                             <ul>
                                 <li class="mb-2"><a class="text-white" href="#">HOME</a></li>
                                 <li class="mb-2"><a class="text-white" href="#">ABOUT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">SERVICE</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">PROJECT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
+                               
                             </ul>
                         </div>
                         <div class="float-left ml-5">
                             <ul>
                                 <li class="mb-2"><a class="text-white" href="#">CONTACT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">OUR TEAM</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">NEW LATEST</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">OUR PARTNER</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">SUPPORT</a></li>
-                            </ul>
+                                <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
                         </div>
                     </div>
                 </div>
@@ -400,7 +311,7 @@
     <div class="container-md">
         <div class="row">
             <div class="col-12">
-                <p class="text-center text-white"> Navdeep</p>
+                <p class="text-center text-white">Dhamini Nijgal </p>
             </div>
         </div>
     </div>
