--- a/index.html
+++ b/index.html
@@ -140,7 +140,186 @@
                             </div> -->
                         </div>
                     </div>
-                    <div class="row serviceslides">
+
+                    <!-- Font Awesome Icon Library -->
+                    <link rel="stylesheet"
+                        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                    <style>
+                        * {
+                            box-sizing: border-box;
+                        }
+
+                        body {
+                            font-family: Arial;
+                            margin: 0 auto;
+                            /* Center website */
+                            /* max-width: 800px; */
+                            /* Max width */
+                            padding: 20px;
+                        }
+
+                        .heading {
+                            font-size: 25px;
+                            margin-right: 25px;
+                        }
+
+                        .fa {
+                            font-size: 25px;
+                        }
+
+                        .checked {
+                            color: orange;
+                        }
+
+                        /* Three column layout */
+                        .side {
+                            float: left;
+                            width: 15%;
+                            margin-top: 10px;
+                        }
+
+                        .middle {
+                            margin-top: 10px;
+                            float: left;
+                            width: 70%;
+                        }
+
+                        /* Place text to the right */
+                        .right {
+                            text-align: right;
+                        }
+
+                        /* Clear floats after the columns */
+                        .row:after {
+                            content: "";
+                            display: table;
+                            clear: both;
+                        }
+
+                        /* The bar container */
+                        .bar-container {
+                            width: 100%;
+                            background-color: #f1f1f1;
+                            text-align: center;
+                            color: white;
+                        }
+
+                        /* Individual bars */
+                        .bar-5 {
+                            width: 60%;
+                            height: 18px;
+                            background-color: #04AA6D;
+                        }
+
+                        .bar-4 {
+                            width: 30%;
+                            height: 18px;
+                            background-color: #2196F3;
+                        }
+
+                        .bar-3 {
+                            width: 10%;
+                            height: 18px;
+                            background-color: #00bcd4;
+                        }
+
+                        .bar-2 {
+                            width: 4%;
+                            height: 18px;
+                            background-color: #ff9800;
+                        }
+
+                        .bar-1 {
+                            width: 15%;
+                            height: 18px;
+                            background-color: #f44336;
+                        }
+
+                        /* Responsive layout - make the columns stack on top of each other instead of next to each other */
+                        @media (max-width: 400px) {
+
+                            .side,
+                            .middle {
+                                width: 100%;
+                            }
+
+                            .right {
+                                display: none;
+                            }
+                        }
+                    </style>
+                    </head>
+
+                    <body>
+
+                        <span class="heading">User Rating</span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star checked"></span>
+                        <span class="fa fa-star"></span>
+                        <p>4.1 average based on 254 reviews.</p>
+                        <hr style="border:3px solid #f1f1f1">
+
+                        <div class="row">
+                            <div class="side">
+                                <div>5 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-5"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div>150</div>
+                            </div>
+                            <div class="side">
+                                <div>4 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-4"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div>63</div>
+                            </div>
+                            <div class="side">
+                                <div>3 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-3"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div>15</div>
+                            </div>
+                            <div class="side">
+                                <div>2 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-2"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div>6</div>
+                            </div>
+                            <div class="side">
+                                <div>1 star</div>
+                            </div>
+                            <div class="middle">
+                                <div class="bar-container">
+                                    <div class="bar-1"></div>
+                                </div>
+                            </div>
+                            <div class="side right">
+                                <div>20</div>
+                            </div>
+                        </div>
+
+<!-- <div class="row serviceslides">
                         <div class="col-sm-12 col-md-6 col-lg-4">
                             <div class="card my-3 mx-auto" style="width:auto">
                                 <img class="card-img-top" src="./img/service1.jpg" alt="Card image"
@@ -175,130 +354,131 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+</div>
+</div>
+</div>
+</section>
+<!--wrap-4 ends-->
+<!--wrap-5 starts-->
+<section class="wrap-5 py-5">
+    <div class="container-md">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-6">
+                <div class="inner-content text-justify ">
+                    <h3 class="mb-4">OUR STORY</h3>
+                    <h4 class="mb-3"></h4>
+                    <p>One should never forget their roots because it always has that positive connection lying deep
+                        within one...</p>
+                    <ul>
+                        <li> <a href="./about.html" class="btn text-white mb-3">Read More Here</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-12 col-sm-12 col-md-6">
+                <div class="inner-img">
+                    <img src="./img/storyimg.jpg" alt="" width="100%" height="350px">
                 </div>
             </div>
         </div>
-    </section>
-    <!--wrap-4 ends-->
-    <!--wrap-5 starts-->
-    <section class="wrap-5 py-5">
-        <div class="container-md">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-6">
-                    <div class="inner-content text-justify ">
-                        <h3 class="mb-4">OUR STORY</h3>
-                        <h4 class="mb-3"></h4>
-                        <p>One should never forget their roots because it always has that positive connection lying deep within one...</p>
-                        <ul>
-                            <li> <a href="./about.html" class="btn text-white mb-3">Read More Here</a>
-                            </li>
-                        </ul>
-                    </div>
+    </div>
+</section>
+<!--wrap-5 ends-->
+
+<!--wrap- 6 starts-->
+<section class="wrap-6 py-3">
+    <div class="container-md">
+        <div class="row">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
+                <div>
+                    <h3 class="colored  mb-4">Ab's Villa</h3>
+                    <p class="text-white text-justify text-justify"> We are know for the worlds best services </p>
+                    <p class="text-white text-justify text-justify">We never tried to cut on either quality, the
+                        pace of work or any other
+                        servicing you </p>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6">
-                    <div class="inner-img">
-                        <img src="./img/storyimg.jpg" alt="" width="100%" height="350px">
-                    </div>
-                </div>
+
             </div>
-        </div>
-    </section>
-    <!--wrap-5 ends-->
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+                <div>
+                    <h3 class="text-white mb-4">Navigation</h3>
+                    <div class="clearfix">
+                        <div class="float-left">
+                            <ul>
+                                <li class="mb-2"><a class="text-white" href="#">HOME</a></li>
+                                <li class="mb-2"><a class="text-white" href="#">ABOUT</a></li>
 
-    <!--wrap- 6 starts-->
-    <section class="wrap-6 py-3">
-        <div class="container-md">
-            <div class="row">
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
-                    <div>
-                        <h3 class="colored  mb-4">Ab's Villa</h3>
-                        <p class="text-white text-justify text-justify"> We are know for the worlds best services </p>
-                        <p class="text-white text-justify text-justify">We never tried to cut on either quality, the
-                            pace of work or any other
-                            servicing you </p>
-                    </div>
-
-                </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                    <div>
-                        <h3 class="text-white mb-4">Navigation</h3>
-                        <div class="clearfix">
-                            <div class="float-left">
-                                <ul>
-                                    <li class="mb-2"><a class="text-white" href="#">HOME</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">ABOUT</a></li>
-                                    
-                                </ul>
-                            </div>
-                            <div class="float-left ml-5">
-                                <ul>
-                                    <li class="mb-2"><a class="text-white" href="#">CONTACT</a></li>
-                                    <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
-                                </ul>
-                            </div>
+                            </ul>
+                        </div>
+                        <div class="float-left ml-5">
+                            <ul>
+                                <li class="mb-2"><a class="text-white" href="#">CONTACT</a></li>
+                                <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
+                            </ul>
                         </div>
                     </div>
-
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                    <div>
-                        <h3 class="text-white mb-4">Working Hours</h3>
-                        <p class="text-white">Our support available to help you 24 hours a day, seven days a week</p>
-                        <p class="text-white">Worrking Days:MON-FRI</p>
-                        <p class="text-white">Working Hours:9:00 AM to 5:00 PM</p>
-                        <p class="text-white">Support:25x7</p>
-                    </div>
 
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+                <div>
+                    <h3 class="text-white mb-4">Working Hours</h3>
+                    <p class="text-white">Our support available to help you 24 hours a day, seven days a week</p>
+                    <p class="text-white">Worrking Days:MON-FRI</p>
+                    <p class="text-white">Working Hours:9:00 AM to 5:00 PM</p>
+                    <p class="text-white">Support:25x7</p>
                 </div>
-                <div class="col-12 col-sm-12 col-md-6 col-lg-3">
-                    <div>
-                        <h3 class="text-white mb-4">Subscribe</h3>
-                        <p class="text-white text-justify">Subscribe to our newsletter to recieve exclusive offers and
-                            the latest
-                            news on
-                            our products and
-                            services.</p>
-                        <div class="input-group bg-dark">
-                            <div class="input-group-append">
-                                <span class="input-group-text  bg-dark border-dark"><span
-                                        class="fas far fa-paper-plane"></span></span>
-                            </div>
-                            <label for="mail" aria-label="mail"></label>
-                            <input type="text" class="form-control bg-dark border-dark text-white" placeholder="E-Mail"
-                                name="email" id="mail">
+
+            </div>
+            <div class="col-12 col-sm-12 col-md-6 col-lg-3">
+                <div>
+                    <h3 class="text-white mb-4">Subscribe</h3>
+                    <p class="text-white text-justify">Subscribe to our newsletter to recieve exclusive offers and
+                        the latest
+                        news on
+                        our products and
+                        services.</p>
+                    <div class="input-group bg-dark">
+                        <div class="input-group-append">
+                            <span class="input-group-text  bg-dark border-dark"><span
+                                    class="fas far fa-paper-plane"></span></span>
                         </div>
+                        <label for="mail" aria-label="mail"></label>
+                        <input type="text" class="form-control bg-dark border-dark text-white" placeholder="E-Mail"
+                            name="email" id="mail">
                     </div>
-
                 </div>
+
             </div>
         </div>
-    </section>
-    <!--wrap-6 ends-->
-    <footer class="wrap-7 p-3">
-        <div class="container-md">
-            <div class="row">
-                <div class="col-12">
-                    <p class="text-center text-white">Developed by Dhamini Nijgal</p>
-                </div>
+    </div>
+</section>
+<!--wrap-6 ends-->
+<footer class="wrap-7 p-3">
+    <div class="container-md">
+        <div class="row">
+            <div class="col-12">
+                <p class="text-center text-white">Developed by Dhamini Nijgal</p>
             </div>
         </div>
-    </footer>
-    <button class="gototop p-3 text-white border-0" aria-label="Gototop"><span
-            class="fa fas fa-angle-double-up"></span></button>
+    </div>
+</footer>
+<button class="gototop p-3 text-white border-0" aria-label="Gototop"><span
+        class="fa fas fa-angle-double-up"></span></button>
 
 
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
     </script>
-    <script src="./js/jquery.min.js"></script>
-    <script src="./js/custom.js"></script>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/custom.js"></script>
 
 
 
