--- a/news.html
+++ b/news.html
@@ -334,11 +334,12 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
                 <div>
                     <h3 class="colored  mb-4">Ab's Villa</h3>
-                    <p class="text-white text-justify text-justify">Construction core values have been shaped over more than 7 years of the
-                        finest
-                        services.</p>
-                    <p class="text-white text-justify text-justify">We never tried to cut on either quality, the pace of work or any other
-                        construction.</p>
+                    <div>
+                        <p class="text-white text-justify text-justify"> We are know for the worlds best services </p>
+                        <p class="text-white text-justify text-justify">We never tried to cut on either quality, the
+                            pace of work or any other
+                            servicing you </p>
+                    </div>
                 </div>
 
             </div>
@@ -350,19 +351,13 @@
                             <ul>
                                 <li class="mb-2"><a class="text-white" href="#">HOME</a></li>
                                 <li class="mb-2"><a class="text-white" href="#">ABOUT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">SERVICE</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">PROJECT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
+                               
                             </ul>
                         </div>
                         <div class="float-left ml-5">
                             <ul>
                                 <li class="mb-2"><a class="text-white" href="#">CONTACT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">OUR TEAM</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">NEW LATEST</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">OUR PARTNER</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">SUPPORT</a></li>
-                            </ul>
+                                <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
                         </div>
                     </div>
                 </div>
