--- a/services.html
+++ b/services.html
@@ -87,44 +87,58 @@
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="service-data text-center py-3">
                         <span class="fas far fa-ruler mb-2"></span>
-                        <p class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, possimus! Repellendus odit
-                            enim dicta possimus </p>
+                        <p class="p-3">Doctor on call , Dry cleaning , Excursions and guided tours,
+                            Flower arrangement,
+                            Ironing service,
+                            Laundry and valet service ,
+                            Mail services
+                             </p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="service-data text-center py-3">
                         <span class="far fas fa-truck-loading mb-2"></span>
-                        <p class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, possimus! Repellendus odit
-                            enim dicta possimus</p>
+                        <p class="p-3">Room service (24-hour),
+                            Shoeshine service,
+                            Ticket service,
+                            Transfer and chauffeur driven limousine services,
+                            Turndown service,
+                            Valet parking</p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="service-data text-center py-3">
                         <span class="fas far  fa-building mb-2"></span>
-                        <p class=" p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, possimus! Repellendus odit
-                            enim dicta possimus </p>
+                        <p class=" p-3">Luggage storage,
+                            Non-smoking rooms,
+                            Parking outside the hotel at an extra charge,
+                            Pet friendly, at a surcharge </p>
                     </div>
                 </div>
            
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="service-data text-center py-3">
                         <span class="far fas fa-hammer mb-2"></span>
-                        <p class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, possimus! Repellendus odit
-                            enim dicta possimus </p>
+                        <p class="p-3">Restaurant,
+                            Summer terrace,
+                            Complimentary Wi-Fi internet throughout the entire hotel </p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="service-data text-center py-3">
                         <span class="far fas fa-dolly mb-2"></span>
-                        <p class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, possimus! Repellendus odit
-                            enim dicta possimus </p>
+                        <p class="p-3">Conference and meeting facilities,
+                            Disabled room,
+                            Fitness room,
+                            Sauna </p>
                     </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-4">
                     <div class="service-data text-center py-3">
                         <span class="far fas fa-faucet mb-2"></span>
-                        <p class="p-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, possimus! Repellendus odit
-                            enim dicta possimus</p>
+                        <p class="p-3">Car rental services,
+                            Catering services,
+                            Concierge services</p>
                     </div>
                 </div>
 
@@ -184,11 +198,12 @@
             <div class="col-12 col-sm-12 col-md-6 col-lg-3 ">
                 <div>
                     <h3 class="colored  mb-4">Ab's Villa</h3>
-                    <p class="text-white text-justify text-justify">Construction core values have been shaped over more than 7 years of the
-                        finest
-                        services.</p>
-                    <p class="text-white text-justify text-justify">We never tried to cut on either quality, the pace of work or any other
-                        construction.</p>
+                    <div>
+                        <p class="text-white text-justify text-justify"> We are know for the worlds best services </p>
+                        <p class="text-white text-justify text-justify">We never tried to cut on either quality, the
+                            pace of work or any other
+                            servicing you </p>
+                    </div>
                 </div>
 
             </div>
@@ -200,19 +215,13 @@
                             <ul>
                                 <li class="mb-2"><a class="text-white" href="#">HOME</a></li>
                                 <li class="mb-2"><a class="text-white" href="#">ABOUT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">SERVICE</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">PROJECT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
+                               
                             </ul>
                         </div>
                         <div class="float-left ml-5">
                             <ul>
                                 <li class="mb-2"><a class="text-white" href="#">CONTACT</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">OUR TEAM</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">NEW LATEST</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">OUR PARTNER</a></li>
-                                <li class="mb-2"><a class="text-white" href="#">SUPPORT</a></li>
-                            </ul>
+                                <li class="mb-2"><a class="text-white" href="#">BLOG</a></li>
                         </div>
                     </div>
                 </div>
