--- a/about.html
+++ b/about.html
@@ -148,70 +148,25 @@
 
 
     <!--wrap-4 starts-->
-    <section class="aboutwrap-3 my-5">
-        <div class="container-md" >
-            <div class="row">
-                <div class="col-12">
-                    <div class="clearfix mb-5">
-                        <div class="left float-left">
-                            <h3>OUR TEAM</h3>
-                        </div>
-                        <div class="right float-right">
-                            <div class="btn-group " role="group" aria-label="Button group">
-                                <button class="prev btn text-white mr-2" type="button"aria-label="prevbtn"><span class="fa fas fa-angle-left"></span></button>
-                                <button class="next btn text-white" type="button"aria-label="nextbtn"><span class="fa fas fa-angle-right"></span></button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row slider">
-                        
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Abigail</h4>
-                                    <p class="card-text">Managing Director</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/service1.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Mini </h4>
-                                    <p class="card-text">Co-Director</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3 ">
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Shiju S</h4>
-                                    <p class="card-text">Co-Director</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12  col-sm-6 col-md-6 col-lg-3 " >
-                            <div class="card my-3 mx-auto" style="width:auto">
-                                <img class="card-img-top img-fluid" src="./img/drill.jpg"width="348" height="250" alt="Card image"
-                                    >
-                                <div class="card-body">
-                                    <h4 class="card-title">Anoop</h4>
-                                    <p class="card-text">Care-Taker</p>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
+    <!-- <section class="wrap-2 mt-5">
+        <div id="demo" class="carousel slide" data-ride="carousel">
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+            </ul>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./img/11.jpeg" alt="Los Angeles" width="1100" height="500">
+                </div>
+                <div class="carousel-item">
+                    <img src="./img/13.jpeg" alt="Chicago" width="500" height="500">
                 </div>
             </div>
+            <a class="carousel-control-prev" aria-label="prevbutton" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
         </div>
-    </section>
-    <!--wrap-4 ends-->
+    </section> -->
 
 
 
