--- a/services.html
+++ b/services.html
@@ -101,7 +101,7 @@
                         <p class="p-3">Room service (24-hour),
                             Shoeshine service,
                             Ticket service,
-                            Transfer and chauffeur driven limousine services,
+                            Transfer and chauffeur driven services,
                             Turndown service,
                             Valet parking</p>
                     </div>
